<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.register.RegisterActivity"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:paddingHorizontal="42dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="14sp"
            android:textColor="@color/primary_gray"
            android:fontFamily="@font/montserrat_light"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/edit_text_round"
            android:autofillHints="name"
            android:fontFamily="@font/montserrat_regular"
            android:paddingHorizontal="16dp"
            android:labelFor="@id/ed_name"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/tv_name_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_name"
            android:textSize="12sp"
            android:textColor="@color/red"
            android:fontFamily="@font/montserrat_light"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/email"
            android:textSize="14sp"
            android:textColor="@color/primary_gray"
            android:fontFamily="@font/montserrat_light"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/edit_text_round"
            android:autofillHints="email"
            android:fontFamily="@font/montserrat_regular"
            android:paddingHorizontal="16dp"
            android:labelFor="@id/ed_email"
            android:inputType="textEmailAddress"/>

        <TextView
            android:id="@+id/tv_email_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_email"
            android:textSize="12sp"
            android:textColor="@color/red"
            android:fontFamily="@font/montserrat_light"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:text="@string/password"
            android:textSize="14sp"
            android:textColor="@color/primary_gray"
            android:fontFamily="@font/montserrat_light"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/edit_text_round"
            android:autofillHints="password"
            android:fontFamily="@font/montserrat_regular"
            android:paddingHorizontal="16dp"
            android:labelFor="@id/ed_password"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/tv_password_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_password"
            android:textSize="12sp"
            android:textColor="@color/red"
            android:fontFamily="@font/montserrat_light"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginTop="22dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/blue"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/register" />

        <TextView
            android:id="@+id/tv_back_to_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:layout_gravity="center"
            android:textSize="14sp"
            android:textColor="@color/blue"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/back_to_login" />
    </LinearLayout>

</ScrollView>