<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:minWidth="320dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginTop="12dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvLogoutDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout_confirmation"
        android:textSize="14sp"
        android:textColor="@color/primary_gray"
        android:fontFamily="@font/montserrat_light"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvLogout"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnLogout"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:text="@string/ya"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_regular"
        android:backgroundTint="@color/blue"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvLogoutDesc"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="90dp"
        android:layout_height="40dp"
        android:text="@string/cancel"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:fontFamily="@font/montserrat_regular"
        android:backgroundTint="@color/red"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvLogoutDesc"
        app:layout_constraintEnd_toStartOf="@+id/btnLogout"/>

</androidx.constraintlayout.widget.ConstraintLayout>