<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.canvas.CanvasActivity">

    <include
        android:id="@+id/appBarLayout"
        layout="@layout/app_bar_layout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.github.gcacace.signaturepad.views.SignaturePad
        android:id="@+id/signature_pad"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:background="@drawable/dash_line"
        app:penColor="@android:color/black"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_signature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/only_one_script"
        android:layout_marginTop="2dp"
        android:layout_marginHorizontal="16dp"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/signature_pad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btn_clear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/red"
        app:layout_constraintTop_toBottomOf="@+id/tv_signature"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/predict"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/predict"
        android:fontFamily="@font/montserrat_regular"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/btn_clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>